--- a/plugins/jquery-datatable/skin/bootstrap/css/dataTables.bootstrap.css
+++ b/plugins/jquery-datatable/skin/bootstrap/css/dataTables.bootstrap.css
@@ -126,7 +126,7 @@ div.dataTables_scrollFoot table {
   div.dataTables_wrapper div.dataTables_filter,
   div.dataTables_wrapper div.dataTables_info,
   div.dataTables_wrapper div.dataTables_paginate {
-    text-align: center;
+    text-align: left; /*center;  mks77*/
   }
 }
 table.dataTable.table-condensed > thead > tr > th {
